Better combat compatability and names

--- a/src/main/resources/assets/unearthedarcana/lang/en_us.json
+++ b/src/main/resources/assets/unearthedarcana/lang/en_us.json
@@ -1,4 +1,10 @@
 {
   "item.unearthedarcana.the_throngler": "The Throngler",
-  "item.unearthedarcana.the_throngler.desc": "A weapon sealed away for millenia, said to have brought a dark king to naught but an ashen mist\n\nRight click to begin throngling"
+  "item.unearthedarcana.the_throngler.desc": "A weapon sealed away for millenia, said to have brought a dark king to naught but an ashen mist\n\nRight click to begin throngling",
+
+  "item.unearthedarcana.dawn_of_time": "Dawn of Time",
+
+  "item.unearthedarcana.deliverance": "Deliverance",
+
+  "item.unearthedarcana.deepest_entropy": "Deepest Entropy"
 }
